--- a/index.html
+++ b/index.html
@@ -19,101 +19,115 @@
 
     <!-- Header -->
 
-    <header>
-        <a class="logo" href="#"><span class="logo-span">Web</span>Studio</a>
-        <nav class="navigation">
-            <ul class="navigation-list">
-                <li><a href="./index.html" class="navigation-item active">Студія</a></li>
-                <li><a href="./portfolio.html" class="navigation-item">Портфоліо</a></li>
-                <li><a href="#" class="navigation-item">Контакти</a></li>
+    <header class="page-header">
+        <div class="container header-container">
+            <a class="logo" href="#"><span class="logo-span">Web</span>Studio</a>
+            <nav class="navigation">
+                <ul class="navigation-list">
+                    <li><a href="./index.html" class="navigation-item active">Студія</a></li>
+                    <li><a href="./portfolio.html" class="navigation-item">Портфоліо</a></li>
+                    <li><a href="#" class="navigation-item">Контакти</a></li>
+                </ul>
+            </nav>
+            <ul class="contacts-list">
+                <li><a class="contacts-item" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="contacts-item" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
-        </nav>
-        <ul class="navigation-list">
-            <li><a class="navigation-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="navigation-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+        </div>
     </header>
 
     <!-- Main -->
 
     <main>
         <section class="hero">
-            <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-            <button class="hero-button" type="button">Замовити послугу</button>
+            <div class="container">
+                <h1 class="hero-title">Ефективні рішення для <br />вашого бізнесу</h1>
+                <button class="hero-button" type="button">Замовити послугу</button>
+            </div>
         </section>
-        <section class="features">
-            <h2 hidden>Особливості</h2>
-            <ul class="features-list">
-                <li class="features-item">
-                    <h3 class="features-subtitle">УВАГА ДО ДЕТАЛЕЙ</h3>
-                    <p class="features-text">Ідейні міркування, і навіть початок повсякденної роботи з формування
-                        позиції.</p>
-                </li>
-                <li class="features-item">
-                    <h3 class="features-subtitle">ПУНКТУАЛЬНІСТЬ</h3>
-                    <p class="features-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
-                    </p>
-                </li>
-                <li class="features-item">
-                    <h3 class="features-subtitle">ПЛАНУВАННЯ</h3>
-                    <p class="features-text">Так само консультація з широким активом значною мірою зумовлює.</p>
-                </li>
-                <li class="features-item">
-                    <h3 class="features-subtitle">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                    <p class="features-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.
-                    </p>
-                </li>
-            </ul>
+        <section class="section">
+            <div class="container">
+                <h2 hidden>Особливості</h2>
+                <ul class="features-list">
+                    <li class="features-item">
+                        <h3 class="features-subtitle">УВАГА ДО ДЕТАЛЕЙ</h3>
+                        <p class="features-text">Ідейні міркування, і навіть початок повсякденної роботи з формування
+                            позиції.</p>
+                    </li>
+                    <li class="features-item">
+                        <h3 class="features-subtitle">ПУНКТУАЛЬНІСТЬ</h3>
+                        <p class="features-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у
+                            себе.
+                        </p>
+                    </li>
+                    <li class="features-item">
+                        <h3 class="features-subtitle">ПЛАНУВАННЯ</h3>
+                        <p class="features-text">Так само консультація з широким активом значною мірою зумовлює.</p>
+                    </li>
+                    <li class="features-item">
+                        <h3 class="features-subtitle">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                        <p class="features-text">Значимість цих проблем настільки очевидна, що реалізація планових
+                            завдань.
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="about">
-            <h2 class="about-title">Чим ми займаємося</h2>
-            <ul class="about-list">
-                <li><img src="./images/box1.jpg" alt="Пишемо код" width="370"></li>
-                <li><img src="./images/box2.jpg" alt="Проектуємо мобільний дизайн" width="370"></li>
-                <li><img src="./images/box3.jpg" alt="Аналізуємо палітру кольорів" width="370"></li>
-            </ul>
+            <div class="container">
+                <h2 class="about-title">Чим ми займаємося</h2>
+                <ul class="about-list">
+                    <li><img src="./images/box1.jpg" alt="Пишемо код" width="370"></li>
+                    <li><img src="./images/box2.jpg" alt="Проектуємо мобільний дизайн" width="370"></li>
+                    <li><img src="./images/box3.jpg" alt="Аналізуємо палітру кольорів" width="370"></li>
+                </ul>
+            </div>
         </section>
-        <section class="team">
-            <h2 class="team-title">Наша команда</h2>
-            <ul class="team-list">
-                <li>
-                    <img class="member-photo" src="./images/igor.jpg" alt="Ігор Дем'яненко" width="270">
-                    <h3 class="member-name">Ігор Дем'яненко</h3>
-                    <p class="member-job">Product Designer</p>
-                </li>
-                <li>
-                    <img class="member-photo" src="./images/olga.jpg" alt="Ольга Рєпіна" width="270">
-                    <h3 class="member-name">Ольга Рєпіна</h3>
-                    <p class="member-job">Frontend Developer</p>
-                </li>
-                <li>
-                    <img class="member-photo" src="./images/niccolo.jpg" alt="Микола Тарасов" width="270">
-                    <h3 class="member-name">Микола Тарасов</h3>
-                    <p class="member-job">Marketing</p>
-                </li>
-                <li>
-                    <img class="member-photo" src="./images/michael.jpg" alt="Михайло Єрмаков" width="270">
-                    <h3 class="member-name">Михайло Єрмаков</h3>
-                    <p class="member-job">UI Designer</p>
-                </li>
-            </ul>
+        <section class="section">
+            <div class="container">
+                <h2 class="team-title">Наша команда</h2>
+                <ul class="team-list">
+                    <li>
+                        <img class="member-photo" src="./images/igor.jpg" alt="Ігор Дем'яненко" width="270">
+                        <h3 class="member-name">Ігор Дем'яненко</h3>
+                        <p class="member-job">Product Designer</p>
+                    </li>
+                    <li>
+                        <img class="member-photo" src="./images/olga.jpg" alt="Ольга Рєпіна" width="270">
+                        <h3 class="member-name">Ольга Рєпіна</h3>
+                        <p class="member-job">Frontend Developer</p>
+                    </li>
+                    <li>
+                        <img class="member-photo" src="./images/niccolo.jpg" alt="Микола Тарасов" width="270">
+                        <h3 class="member-name">Микола Тарасов</h3>
+                        <p class="member-job">Marketing</p>
+                    </li>
+                    <li>
+                        <img class="member-photo" src="./images/michael.jpg" alt="Михайло Єрмаков" width="270">
+                        <h3 class="member-name">Михайло Єрмаков</h3>
+                        <p class="member-job">UI Designer</p>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
 
     <!-- Footer -->
 
     <footer class="page-footer">
-        <a class="footer-logo" href="#"><span class="logo-span">Web</span>Studio</a>
-        <address>
-            <ul class="footer-list">
-                <li><a class="footer-location" href="https://goo.gl/maps/iSP6fUKGi2yoj21T9" target="_blank"
-                        rel="noopener noreferrer">м. Київ,
-                        пр-т Лесі Українки,
-                        26</a></li>
-                <li><a class="footer-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="footer-contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
+        <div class="container">
+            <a class="footer-logo" href="#"><span class="logo-span">Web</span>Studio</a>
+            <address>
+                <ul class="footer-list">
+                    <li><a class="footer-location" href="https://goo.gl/maps/iSP6fUKGi2yoj21T9" target="_blank"
+                            rel="noopener noreferrer">м. Київ,
+                            пр-т Лесі Українки,
+                            26</a></li>
+                    <li><a class="footer-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="footer-contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 
