--- a/portfolio.html
+++ b/portfolio.html
@@ -20,18 +20,20 @@
     <!-- Header -->
 
     <header>
-        <a class="logo" href="#"><span class="logo-span">Web</span>Studio</a>
-        <nav class="navigation">
+        <div class="container">
+            <a class="logo" href="#"><span class="logo-span">Web</span>Studio</a>
+            <nav class="navigation">
+                <ul class="navigation-list">
+                    <li><a href="./index.html" class="navigation-item">Студія</a></li>
+                    <li><a href="./portfolio.html" class="navigation-item active">Портфоліо</a></li>
+                    <li><a href="#" class="navigation-item">Контакти</a></li>
+                </ul>
+            </nav>
             <ul class="navigation-list">
-                <li><a href="./index.html" class="navigation-item">Студія</a></li>
-                <li><a href="./portfolio.html" class="navigation-item active">Портфоліо</a></li>
-                <li><a href="#" class="navigation-item">Контакти</a></li>
+                <li><a class="navigation-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="navigation-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
-        </nav>
-        <ul class="navigation-list">
-            <li><a class="navigation-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="navigation-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+        </div>
     </header>
 
     <!-- Main -->
