add header & footer to portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,19 +19,19 @@
 
     <!-- Header -->
 
-    <header>
-        <div class="container">
+    <header class="page-header">
+        <div class="container header-container">
             <a class="logo" href="#"><span class="logo-span">Web</span>Studio</a>
             <nav class="navigation">
                 <ul class="navigation-list">
-                    <li><a href="./index.html" class="navigation-item">Студія</a></li>
-                    <li><a href="./portfolio.html" class="navigation-item active">Портфоліо</a></li>
+                    <li><a href="./index.html" class="navigation-item active">Студія</a></li>
+                    <li><a href="./portfolio.html" class="navigation-item">Портфоліо</a></li>
                     <li><a href="#" class="navigation-item">Контакти</a></li>
                 </ul>
             </nav>
-            <ul class="navigation-list">
-                <li><a class="navigation-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="navigation-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <ul class="contacts-list">
+                <li><a class="contacts-item" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="contacts-item" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
@@ -120,17 +120,19 @@
     <!-- Footer -->
 
     <footer class="page-footer">
-        <a class="footer-logo" href="#"><span class="logo-span">Web</span>Studio</a>
-        <address>
-            <ul class="footer-list">
-                <li><a class="footer-location" href="https://goo.gl/maps/iSP6fUKGi2yoj21T9" target="_blank"
-                        rel="noopener noreferrer">м. Київ,
-                        пр-т Лесі Українки,
-                        26</a></li>
-                <li><a class="footer-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="footer-contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
+        <div class="container">
+            <a class="footer-logo" href="#"><span class="logo-span">Web</span>Studio</a>
+            <address>
+                <ul class="footer-list">
+                    <li><a class="footer-location" href="https://goo.gl/maps/iSP6fUKGi2yoj21T9" target="_blank"
+                            rel="noopener noreferrer">м. Київ,
+                            пр-т Лесі Українки,
+                            26</a></li>
+                    <li><a class="footer-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="footer-contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 
