button padding fix

--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
                         </a>
                     </li>
                     <li>
-                        <a class="product-item" href="№">
+                        <a class="product-item" href="#">
                             <img src="./images/project3.jpg" alt="Постер рибного ресторану" width="370">
                             <h2 class="product-title">Ресторан Seafood</h2>
                             <p class="product-text">Додаток</p>
