--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </ul>
             </div>
         </section>
-        <section class="section">
+        <section class="section team">
             <div class="container">
                 <h2 class="team-title">Наша команда</h2>
                 <ul class="team-list">
