--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </section>
         <section class="section">
             <div class="container">
-                <h2 hidden>Особливості</h2>
+                <h2 class="hidden">Особливості</h2>
                 <ul class="features-list">
                     <li class="features-item">
                         <h3 class="features-subtitle">УВАГА ДО ДЕТАЛЕЙ</h3>
