--- a/portfolio.html
+++ b/portfolio.html
@@ -41,8 +41,7 @@
     <main>
         <section class="section">
             <div class="container">
-                <h1 hidden>Проєкти</h1>
-                <!--Прихований заголовок-->
+                <h1 class="hidden">Проєкти</h1>
                 <ul class="filter-list">
                     <li><button class="filter-button" type="button">Усі</button></li>
                     <li><button class="filter-button" type="button">Веб-сайти</button></li>
@@ -54,64 +53,82 @@
                     <li>
                         <a class="product-item" href="#">
                             <img src="./images/project1.jpg" alt="Веб-сайт" width="370">
-                            <h2 class="product-title">Технокряк</h2>
-                            <p class="product-text">Веб-сайт</p>
+                            <div class="product-container">
+                                <h2 class="product-title">Технокряк</h2>
+                                <p class="product-text">Веб-сайт</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a class="product-item" href="#">
                             <img src="./images/project2.jpg" alt="Постер баскетбольної гри" width="370">
-                            <h2 class="product-title">Постер New Orlean vs Golden Star</h2>
-                            <p class="product-text">Дизайн</p>
+                            <div class="product-container">
+                                <h2 class="product-title">Постер New Orlean vs Golden Star</h2>
+                                <p class="product-text">Дизайн</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a class="product-item" href="#">
                             <img src="./images/project3.jpg" alt="Постер рибного ресторану" width="370">
-                            <h2 class="product-title">Ресторан Seafood</h2>
-                            <p class="product-text">Додаток</p>
+                            <div class="product-container">
+                                <h2 class="product-title">Ресторан Seafood</h2>
+                                <p class="product-text">Додаток</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a class="product-item" href="#">
                             <img src="./images/project4.jpg" alt="Повнорозмірні навушники" width="370">
-                            <h2 class="product-title">Проєкт Prime</h2>
-                            <p class="product-text">Маркетинг</p>
+                            <div class="product-container">
+                                <h2 class="product-title">Проєкт Prime</h2>
+                                <p class="product-text">Маркетинг</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a class="product-item" href="#">
                             <img src="./images/project5.jpg" alt="Дві красиві коробки" width="370">
-                            <h2 class="product-title">Проєкт Boxes</h2>
-                            <p class="product-text">Додаток</p>
+                            <div class="product-container">
+                                <h2 class="product-title">Проєкт Boxes</h2>
+                                <p class="product-text">Додаток</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a class="product-item" href="#">
                             <img src="./images/project6.jpg" alt="Веб-сайт" width="370">
-                            <h2 class="product-title">Inspiration has no Borders</h2>
-                            <p class="product-text">Веб-сайт</p>
+                            <div class="product-container">
+                                <h2 class="product-title">Inspiration has no Borders</h2>
+                                <p class="product-text">Веб-сайт</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a class="product-item" href="#">
                             <img src="./images/project7.jpg" alt="Глянцевий журнал" width="370">
-                            <h2 class="product-title">Видання Limited Edition</h2>
-                            <p class="product-text">Дизайн</p>
+                            <div class="product-container">
+                                <h2 class="product-title">Видання Limited Edition</h2>
+                                <p class="product-text">Дизайн</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a class="product-item" href="#">
                             <img src="./images/project8.jpg" alt="Красива бірка" width="370">
-                            <h2 class="product-title">Проєкт LAB</h2>
-                            <p class="product-text">Маркетинг</p>
+                            <div class="product-container">
+                                <h2 class="product-title">Проєкт LAB</h2>
+                                <p class="product-text">Маркетинг</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a class="product-item" href="#">
                             <img src="./images/project9.jpg" alt="Людина працює за ноутбуком" width="370">
-                            <h2 class="product-title">Growing Business</h2>
-                            <p class="product-text">Додаток</p>
+                            <div class="product-container">
+                                <h2 class="product-title">Growing Business</h2>
+                                <p class="product-text">Додаток</p>
+                            </div>
                         </a>
                     </li>
                 </ul>
